<resources>
    <string name="app_name">UniTipsNew</string>
    <string name="tab_text_1">Recensioni</string>
    <string name="tab_text_2">Eventi</string>
    <string name="tab_text_3">Tips</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="immagine_evento">immagine_evento</string>
    <string name="replaced_text">testo_dinamico</string>
    <string name="Brand">Uni Tips</string>
    <string name="password_dimenticata_action">Hai dimenticato la password?</string>
    <string name="registrati_action">Registrati</string>
    <string name="remember">Ricordami</string>
    <string name="logo">LOGO</string>
    <string name="delete_account">Elimina Account</string>
    <string name="update_account">Aggiorna Account</string>
    <string name="alter">alter_image</string>
    <string name="numero_di_matricola">Numero di matricola</string>
    <string name="il_tuo_nome">Il tuo nome</string>
    <string name="il_tuo_cognome">Il tuo cognome</string>
    <string name="la_tua_email">La tua email</string>
    <string name="scegli_una_password">Scegli una password</string>
    <string name="conferma_la_password">Conferma la password</string>
    <string name="nome_corso">Nome del Corso</string>
    <string name="tv_nome_corso">text view nome corso</string>
    <string name="add_recsensione_title">il titolo della recensione da aggiungere</string>
    <string name="add_recsensione_text">il testo della recensione da aggiungere</string>
    <string name="txt_title">Titolo</string>
    <string name="txt_text">Testo</string>
    <string name="new_recensione">Nuova Recensione</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="annulla">Annulla</string>
    <string name="new_evento">Nuovo Evento</string>
    <string name="data">Data</string>
    <string name="luogo">Luogo</string>
    <string name="immagine_Evento">Immagine Evento</string>
    <string name="crea_Evento">Crea Evento</string>
    <string name="interessato">Sono interessato</string>
    <string name="non_interessato">Non sono più interessato</string>
    <string name="descrizione_evento">Descrizione dell\'evento:</string>
    <string name="commenti">Commenti</string>
    <string name="aggiungi_commento">Scrivi un commento</string>
    <string name="nuovo_commento">Nuovo Commento</string>
    <string name="new_tip">Nuovo Tip</string>
    <string name="title_activity_maps">Map</string>
    <string name="guarda_mappa">Guarda sulla Mappa</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="recupero_della_password">Recupero della password</string>
    <string name="recupera_password">Recupera la Password</string>
    <string name="title_activity_all_events_map">Map</string>
    <string name="vedi_nella_mappa">Vedi nella Mappa</string>
    <string name="scegli_data">Scegli la data dell\'evento</string>
    <string name="filtra">Filtra</string>
    <string name="nome_professore">Nome del Professore</string>
    <string name="numero_recensioni">Numero di Recensioni</string>
    <string name="eventi_giorno">Per Giorno</string>
    <string name="eventi_settimana">Per Settimana</string>
    <string name="eventi_mese">Per Mese</string>
</resources>
