<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/padding_left_recensioni_text"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/padding_left_recensioni_text"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/titolo_filter_eventi_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/filtra"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/giorno_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/eventi_giorno"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/settimana_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/eventi_settimana"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mese_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/eventi_mese"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/annulla_filter_corsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/red"
        android:text="@string/annulla"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>