<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/padding_left_recensioni_text"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/padding_left_recensioni_text"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/titolo_filter_corsi_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/filtra"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/corso_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/nome_corso"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/professore_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/nome_professore"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recensioni_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_left_recensioni_text"
        android:text="@string/numero_recensioni"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>