<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/padding_left_recensioni_text"
    android:layout_marginRight="@dimen/padding_left_recensioni_text"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Recupera_la_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/recupero_della_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_label_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top_recensioni_text"
        android:layout_marginBottom="@dimen/padding_top_recensioni_text"
        android:text="@string/la_tua_email" />

    <EditText
        android:id="@+id/email_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/matricola_label_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top_recensioni_text"
        android:layout_marginBottom="@dimen/padding_top_recensioni_text"
        android:text="@string/numero_di_matricola" />

    <EditText
        android:id="@+id/matricola_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/password_label_restore2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top_recensioni_text"
        android:layout_marginBottom="@dimen/padding_top_recensioni_text"
        android:text="@string/scegli_una_password" />

    <EditText
        android:id="@+id/password_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/info_restore_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/restore_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/recupera_password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>